# openapi/openapi.yaml
@@ -252,7 +252,7 @@ components:
           items:
             type: string
           description: 関連するレシピIDの配列
-        instructions:
+        vibeInstructions:
           type: array
           items:
             $ref: '#/components/schemas/VibeInstruction'
@@ -260,7 +260,7 @@ components:
       required:
         - id
         - recipeIds
-        - instructions
+        - vibeInstructions
 
     VibeInstruction:
       type: object
